# FOSS-Fight

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  Tux.md  converter.py
data/characters/: Debuggy.ff
src/: character.cpp  character.hpp  command_input_parser.cpp  command_input_parser.hpp  frect_helpers.cpp  frect_helpers.hpp  input_history.cpp  input_history.hpp  main.cpp
